RFIDModule/log
In file included from test/test_native/RFIDTests.cc:5:
include/RFID.hh:10:18: error: conflicting declaration ‘TwoWire WireMock’
   10 |     #define Wire WireMock
      |                  ^~~~~~~~
.pio/libdeps/native/ArduinoFake/src/arduino/Wire.h:41:16: note: in expansion of macro ‘Wire’
   41 | extern TwoWire Wire;
      |                ^~~~
In file included from include/RFID.hh:9:
include/../test/test_native/mocks/WireMock.hh:33:11: note: previous declaration as ‘_WireMock WireMock’
   33 | _WireMock WireMock;
      |           ^~~~~~~~
*** [.pio/build/native/test/test_native/RFIDTests.o] Error 1
Building stage has failed, see errors above. Use `pio test -vvv` option to enable verbose output.
------------------------------------------------------------------------------------------ native:test_native [ERRORED] Took 1.76 seconds ------------------------------------------------------------------------------------------
============================================================================================================= SUMMARY =============================================================================================================
Environment    Test         Status    Duration
-------------  -----------  --------  ------------
native         test_native  ERRORED   00:00:01.757
============================================================================================ 1 test cases: 0 succeeded in 00:00:01.757 ============================================================================================
